# typeutils

./: CMakeLists.txt  LICENSE.txt  README.ja.md  README.md
include/: aggregate.hpp  at.hpp  lookup.hpp  str.hpp
test/: Makefile  at.cpp  flatten.cpp  fold.cpp  index.cpp  lu.cpp  map.cpp  recurse.cpp  strings.cpp
